--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/Post-AR.png" />
+    <link rel="icon" type="image/png" href="/Post-AR/src/assets/Post-AR.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Post AR</title>
   </head>
